--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DEBUG=True
 SECRET_KEY=0Eolq3HqAZFM6yZNeWjpXV_lXr6xTvnfaHhllw6mOFhUJQvMFWkPuO6Vw5MYmkzl3DA
-DATABASE_URL=postgresql://wastewise_db_zcwf_user:txAze4XpXcPKRDbi9SbIcIyjdrHQwtK8@dpg-d2r49dp5pdvs738rinlg-a.oregon-postgres.render.com/wastewise_db_zcwf
+DATABASE_URL=postgresql://wastewise_db_g8d2_user:aogIyZLCqAybYFACgWZHF3O62lYU41QR@dpg-d3g5cfp5pdvs73e7l42g-a.oregon-postgres.render.com/wastewise_db_g8d2
 ALLOWED_HOSTS=capstone-backend-3loo.onrender.com,localhost,127.0.0.1
